--- a/StartMeUp/StartMeUp/Views/TestingJson.cshtml
+++ b/StartMeUp/StartMeUp/Views/TestingJson.cshtml
@@ -5,3 +5,5 @@
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <script src="/scripts/geo.js"></script>
 <p id="city"></p>
+<hr />
+<p id="default"></p>
